--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1989,6 +1989,7 @@ span.lessonsCourse {
 }
 .logged-in.node-type-live-events .sharethis{
   border-top:none;
+  padding-top:22px;
 }
 #courseDescription #eSocial .sharethis{
     border-top: none!important;
