--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3205,7 +3205,7 @@ html {
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 16px;
-  padding: 35px 30px 34px;
+  padding: 8px 10px;
   overflow: hidden;
 }
 
@@ -3549,17 +3549,6 @@ a.close-tip {
   font-size: 16px;
 }
 
-/* line 306, ../sass/_tooltipster.scss */
-.tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-  left: 162px !important;
-}
-
-@media (max-width: 1000px) {
-  /* line 310, ../sass/_tooltipster.scss */
-  .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-    left: 20px !important;
-  }
-}
 /* line 314, ../sass/_tooltipster.scss */
 .close-tip img {
   height: 10px;
