--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3205,7 +3205,7 @@ html {
   font-family: Arial, sans-serif;
   font-size: 14px;
   line-height: 16px;
-  padding: 8px 10px;
+  padding: 35px 30px 34px;
   overflow: hidden;
 }
 
