--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -19,7 +19,7 @@ html {
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	line-height: 16px;
-	padding: 35px 30px 34px;
+	padding: 8px 10px;
 	overflow: hidden;
 }
 
@@ -299,18 +299,6 @@ a.close-tip{
 	color: #433A3A;
 	font-size: 16px;
 }
-// #wrapperVideoSection ~ .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-//     left: 33% !important;
-//     top: 33% !important;
-// }
-// .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-//     left: 162px !important;
-// }
-// @media (max-width: 1000px){
-// 	.tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-//     left: 20px !important;
-// }
-// }
 .close-tip img {
     height: 10px;
     margin-left: 0;
