--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -7,11 +7,11 @@ html {
 	background: none repeat scroll 0 0 #F5F5F5;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 1px 1px 2px 1px #CCCCCC;
-    float: left;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    padding: 20px;
-    width: 620px!important; 
+    // float: left;
+    // margin-bottom: 20px;
+    // margin-right: 20px;
+    // padding: 20px;
+    // width: 620px!important; 
 }
 
 /* Use this next selector to style things like font-size and line-height: */
