--- a/sites/all/themes/ukabbalah/sass/_tooltipster.scss
+++ b/sites/all/themes/ukabbalah/sass/_tooltipster.scss
@@ -11,7 +11,7 @@ html {
     // margin-bottom: 20px;
     // margin-right: 20px;
     // padding: 20px;
-    // width: 620px!important; 
+    width: 620px!important; 
 }
 
 /* Use this next selector to style things like font-size and line-height: */
