--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1650,6 +1650,9 @@ h3 {
   margin-top: 5px;
 }
 
+.eventsDate{
+  display: block;
+}
 
 .lessonCollectionSection h2,
 .liveEventCollectionSection h2{
