--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -38,6 +38,7 @@ body {
     padding: 0;
     font-family: $fontFace;
     -webkit-font-smoothing: antialiased; 
+    text-align: left;
 }
 p {
     font-weight: normal;
