--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -37,8 +37,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: $fontFace;
-    -webkit-font-smoothing: antialiased; 
-    text-align: left;
+    -webkit-font-smoothing: antialiased;
 }
 p {
     font-weight: normal;
@@ -2242,7 +2241,7 @@ div.jp-audio{
 #block-ukabbalah-fp-carousals-carousal4 > h2{
     margin: 39px auto 3px;
     width: 940px;
-    color: #999;
+    color: red; // #999
 }
 .carrouselFix{
     margin-left: 10px;
