--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2960,7 +2960,7 @@ div.jp-audio {
 #block-ukabbalah-fp-carousals-carousal4 > h2 {
   margin: 39px auto 3px;
   width: 940px;
-  color: #f00;
+  color: #999;
 }
 
 /* line 2246, ../sass/style.scss */
