--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2241,7 +2241,7 @@ div.jp-audio{
 #block-ukabbalah-fp-carousals-carousal4 > h2{
     margin: 39px auto 3px;
     width: 940px;
-    color: #999;
+    color: #f00; // #999
 }
 .carrouselFix{
     margin-left: 10px;
