--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2428,6 +2428,38 @@ div.jp-audio{
 .scrollingFilter .teachingsBarInnerWrapper{
 	width:auto!important;
 }
+
+
 /**end scrollling filter**/
 
 @import "tooltipster"; // We import the fonts on separate file. The file is called "_tooltipster.scss". 
+
+
+/**agenda**/
+#classAgenda th {
+    background: none repeat scroll 0 0 #F5F5F5;
+    border: medium none;
+    color: #433A3A !important;
+    font-size: 14px;
+    font-weight: bold;
+    height: 30px;
+    line-height: 20px;
+    text-align: left;
+    text-transform: uppercase;
+}
+#classAgenda tr{
+    padding-left: 13px;
+}
+#classAgenda table {
+    border-collapse: collapse;
+    width: 96.5%;
+}
+
+#classAgenda table td {
+    color: #433A3A;
+    font-family: ProxiLight;
+    font-size: 17px;
+    height: 28px;
+    line-height: 30px;
+    text-align: left;
+}
