--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3560,11 +3560,21 @@ a.close-tip {
 }
 
 /**agenda**/
-/* line 2439, ../sass/style.scss */
-#classAgenda th {
+/* line 2440, ../sass/style.scss */
+#classAgenda table {
+  border-collapse: collapse;
+  width: 96.5%;
+  margin-bottom: 20px;
+}
+/* line 2444, ../sass/style.scss */
+#classAgenda table tbody {
+  border: none;
+}
+/* line 2446, ../sass/style.scss */
+#classAgenda table tbody th {
   background: none repeat scroll 0 0 #F5F5F5;
   border: medium none;
-  color: #433A3A !important;
+  color: #433a3a !important;
   font-size: 14px;
   font-weight: bold;
   height: 30px;
@@ -3572,30 +3582,20 @@ a.close-tip {
   text-align: left;
   text-transform: uppercase;
 }
-
-/* line 2451, ../sass/style.scss */
-#classAgenda th:nth-child(1),
-#classAgenda td:nth-child(1) {
+/* line 2456, ../sass/style.scss */
+#classAgenda table tbody th :nth-child(1) {
   padding-left: 13px;
 }
-
-/* line 2454, ../sass/style.scss */
-#classAgenda table {
-  border-collapse: collapse;
-  width: 96.5%;
-}
-
-/* line 2458, ../sass/style.scss */
-#classAgenda tbody {
-  border: none;
-}
-
-/* line 2461, ../sass/style.scss */
-#classAgenda table td {
-  color: #433A3A;
-  font-family: ProxiLight;
+/* line 2459, ../sass/style.scss */
+#classAgenda table tbody th td {
+  color: #433a3a;
+  font-family: "ProxiLight";
   font-size: 17px;
   height: 28px;
   line-height: 30px;
   text-align: left;
+}
+/* line 2466, ../sass/style.scss */
+#classAgenda table tbody th td :nth-child(1) {
+  padding-left: 13px;
 }
