--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2436,37 +2436,34 @@ div.jp-audio{
 
 
 /**agenda**/
-
+#classAgenda th {
+    background: none repeat scroll 0 0 #F5F5F5;
+    border: medium none;
+    color: #433A3A !important;
+    font-size: 14px;
+    font-weight: bold;
+    height: 30px;
+    line-height: 20px;
+    text-align: left;
+    text-transform: uppercase;
+}
+#classAgenda th:nth-child(1), 
+#classAgenda td:nth-child(1){
+    padding-left: 13px;
+}
 #classAgenda table {
     border-collapse: collapse;
     width: 96.5%;
     margin-bottom: 20px;
-    tbody{
-      border:none;
-      th {
-        background: none repeat scroll 0 0 #F5F5F5;
-        border: medium none;
-        color: $colorBrown !important;
-        font-size: 14px;
-        font-weight: bold;
-        height: 30px;
-        line-height: 20px;
-        text-align: left;
-        text-transform: uppercase;
-        &:nth-child(1){
-          padding-left: 13px;
-          }
-        td {
-          color: $colorBrown;
-          font-family: $fontFaceLight;
-          font-size: 17px;
-          height: 28px;
-          text-align: left;
-          line-height: 30px;
-          &:nth-child(1){
-            padding-left: 13px;
-            }
-          }
-        }
-    }
+}
+#classAgenda tbody{
+  border:none
+}
+#classAgenda table td {
+    color: #433A3A;
+    font-family: ProxiLight;
+    font-size: 17px;
+    height: 28px;
+    line-height: 30px;
+    text-align: left;
 }
