--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3564,7 +3564,7 @@ a.close-tip {
 #classAgenda th {
   background: none repeat scroll 0 0 #F5F5F5;
   border: medium none;
-  color: #433A3A !important;
+  color: #433a3a !important;
   font-size: 14px;
   font-weight: bold;
   height: 30px;
@@ -3593,8 +3593,8 @@ a.close-tip {
 
 /* line 2462, ../sass/style.scss */
 #classAgenda table td {
-  color: #433A3A;
-  font-family: ProxiLight;
+  color: #433a3a;
+  font-family: "ProxiLight";
   font-size: 17px;
   height: 28px;
   line-height: 30px;
