--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3564,7 +3564,7 @@ a.close-tip {
 #classAgenda th {
   background: none repeat scroll 0 0 #F5F5F5;
   border: medium none;
-  color: #433a3a !important;
+  color: #433a3a;
   font-size: 14px;
   font-weight: bold;
   height: 30px;
@@ -3581,17 +3581,16 @@ a.close-tip {
 
 /* line 2454, ../sass/style.scss */
 #classAgenda table {
-  border-collapse: collapse;
   width: 96.5%;
   margin-bottom: 20px;
 }
 
-/* line 2459, ../sass/style.scss */
+/* line 2458, ../sass/style.scss */
 #classAgenda tbody {
   border: none;
 }
 
-/* line 2462, ../sass/style.scss */
+/* line 2461, ../sass/style.scss */
 #classAgenda table td {
   color: #433a3a;
   font-family: "ProxiLight";
