added style for search page

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3599,3 +3599,105 @@ a.close-tip {
   line-height: 30px;
   text-align: left;
 }
+
+/**search page**/
+/* line 2475, ../sass/style.scss */
+#edit-field-author-tid-wrapper,
+#edit-field-portion-tid-wrapper,
+#edit-field-secondary-topic-tid-wrapper,
+#edit-title-wrapper {
+  float: left !important;
+}
+
+/* line 2478, ../sass/style.scss */
+#views-exposed-form-search-page span.lessonsCourse {
+  display: block;
+}
+
+/* line 2481, ../sass/style.scss */
+#edit-field-author-tid-wrapper {
+  margin-right: 10px;
+}
+
+/* line 2484, ../sass/style.scss */
+#views-exposed-form-search-page label {
+  display: inline;
+}
+
+/* line 2487, ../sass/style.scss */
+#views-exposed-form-search-page #edit-title-wrapper {
+  margin-left: 0;
+}
+/* line 2489, ../sass/style.scss */
+#views-exposed-form-search-page #edit-title-wrapper label {
+  color: #999999;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 22px;
+  text-align: left;
+  text-transform: capitalize;
+}
+/* line 2497, ../sass/style.scss */
+#views-exposed-form-search-page #edit-title-wrapper input {
+  margin-top: 0;
+}
+
+/* line 2501, ../sass/style.scss */
+.quicktabs-tabs.quicktabs-style-nostyle > li {
+  display: inline;
+  color: #433A3A;
+  text-transform: uppercase;
+  margin-bottom: -1px;
+}
+
+/* line 2507, ../sass/style.scss */
+.quicktabs-tabs.quicktabs-style-nostyle > li.active {
+  background: url("../images/small_tab.png") no-repeat scroll center bottom rgba(0, 0, 0, 0);
+  display: inline-block;
+  height: 41px;
+}
+/* line 2511, ../sass/style.scss */
+.quicktabs-tabs.quicktabs-style-nostyle > li.active a {
+  color: #9C1F19;
+}
+
+/* line 2516, ../sass/style.scss */
+ul.quicktabs-tabs.quicktabs-style-nostyle {
+  border-bottom: 1px solid #CCC;
+  margin-bottom: 20px;
+}
+
+/* line 2521, ../sass/style.scss */
+.quicktabs-tabpage .quicktabs-views-group {
+  float: left;
+  height: 170px;
+  margin: 0 10px 20px;
+  overflow: hidden;
+  width: 300px;
+}
+
+/* line 2528, ../sass/style.scss */
+.quicktabs-tabpage .quicktabs-views-group .theDescCont {
+  margin-top: -60px;
+}
+
+/* line 2531, ../sass/style.scss */
+.views-exposed-widget.views-submit-button {
+  float: left !important;
+  margin-left: 10px;
+}
+
+/* line 2535, ../sass/style.scss */
+#views-exposed-form-search-page input.form-submit {
+  background: none repeat scroll 0 0 #328A9A;
+  border: medium none;
+  border-radius: 4px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: block;
+  font-weight: bold;
+  margin: 22px auto auto;
+  padding: 7px 19px;
+  text-align: center;
+  width: 80px;
+}
