--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -144,7 +144,10 @@ ul li {
     font-size: 12px !important;
     color: $colorBrown;
 }
-
+.searchLogo {
+    float: right;
+    margin-right: 20px;
+}
 /*================== LOCAL MENU ============================= */
 
 #outerMenu{
