--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1680,7 +1680,8 @@ h3 {
 #edit-field-secondary-topic-tid-wrapper .views-widget,
 #edit-field-author-tid-wrapper label,
 #edit-title-wrapper label,
-#edit-type-wrapper label{
+#edit-type-wrapper label,
+#edit-type-wrapper .views-widget{
     margin-right: 10px;
     margin-top: 10px;
 }
