--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -36,6 +36,8 @@ $colorFooterHover : #ff665f;
 body {
     margin: 0;
     padding: 0;
+    max-width: 100%;
+    min-width: 980px;
     font-family: $fontFace;
     -webkit-font-smoothing: antialiased;
 }
